--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -674,6 +674,12 @@
     <Reference Include="UnityEditor.UI">
       <HintPath>C:/Users/plata/Documents/UnityProjects/Vanilla Platformer/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
+    <Reference Include="Cinemachine">
+      <HintPath>C:/Users/plata/Documents/UnityProjects/Vanilla Platformer/Library/ScriptAssemblies/Cinemachine.dll</HintPath>
+    </Reference>
+    <Reference Include="com.unity.cinemachine.editor">
+      <HintPath>C:/Users/plata/Documents/UnityProjects/Vanilla Platformer/Library/ScriptAssemblies/com.unity.cinemachine.editor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
