Now only jumping while grounded.
Added CharacterGrounding.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\CharacterGrounding.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
     <None Include="Assets\Art\Readme.txt" />
     <Reference Include="UnityEngine">
