KillOnTouch - kills the player
Added GameManager

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,7 +65,9 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CharacterAnimation.cs" />
     <Compile Include="Assets\Scripts\CharacterGrounding.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\IMove.cs" />
+    <Compile Include="Assets\Scripts\KillOnTouch.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
     <None Include="Assets\Art\Readme.txt" />
     <Reference Include="UnityEngine">
