--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Scripts\IMove.cs" />
     <Compile Include="Assets\Scripts\KillOnTouch.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
+    <Compile Include="Assets\Scripts\Saw.cs" />
     <Compile Include="Assets\Scripts\UICoinsText.cs" />
     <Compile Include="Assets\Scripts\UIGainCoin.cs" />
     <Compile Include="Assets\Scripts\UILivesText.cs" />
