CharacterGrounding now parenting to moving objects.
Using 3 contact points to determine the parent. I might want to change it to 2 later

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,8 +75,8 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\IMove.cs" />
     <Compile Include="Assets\Scripts\KillOnTouch.cs" />
+    <Compile Include="Assets\Scripts\Mover.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
-    <Compile Include="Assets\Scripts\Saw.cs" />
     <Compile Include="Assets\Scripts\UICoinsText.cs" />
     <Compile Include="Assets\Scripts\UIGainCoin.cs" />
     <Compile Include="Assets\Scripts\UILivesText.cs" />
