Added Walker enemy

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Scripts\UICoinsText.cs" />
     <Compile Include="Assets\Scripts\UIGainCoin.cs" />
     <Compile Include="Assets\Scripts\UILivesText.cs" />
+    <Compile Include="Assets\Scripts\Walker.cs" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
