--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,16 +71,18 @@
     <Compile Include="Assets\Scripts\CoinAudio.cs" />
     <Compile Include="Assets\Scripts\CoinBox.cs" />
     <Compile Include="Assets\Scripts\Collision2DExtensions.cs" />
-    <Compile Include="Assets\Scripts\HandlePlayer.cs" />
+    <Compile Include="Assets\Scripts\HandlePlayerDeath.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IMove.cs" />
     <Compile Include="Assets\Scripts\Interfaces\ITakeHits.cs" />
     <Compile Include="Assets\Scripts\JumpAudio.cs" />
     <Compile Include="Assets\Scripts\KillOnTouch.cs" />
     <Compile Include="Assets\Scripts\LevelExit.cs" />
+    <Compile Include="Assets\Scripts\LifeLossAudio.cs" />
     <Compile Include="Assets\Scripts\Managers\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Managers\CheckpointManager.cs" />
     <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
     <Compile Include="Assets\Scripts\Mover.cs" />
+    <Compile Include="Assets\Scripts\PermanentDeathAudio.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
     <Compile Include="Assets\Scripts\UI\UICoinsText.cs" />
     <Compile Include="Assets\Scripts\UI\UIGainCoin.cs" />
