--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,26 +63,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Audio\CoinAudio.cs" />
+    <Compile Include="Assets\Scripts\Audio\JumpAudio.cs" />
+    <Compile Include="Assets\Scripts\Audio\LifeLossAudio.cs" />
+    <Compile Include="Assets\Scripts\Audio\PermanentDeathAudio.cs" />
+    <Compile Include="Assets\Scripts\Audio\RunLoopAudio.cs" />
     <Compile Include="Assets\Scripts\Breakable.cs" />
     <Compile Include="Assets\Scripts\CharacterAnimation.cs" />
     <Compile Include="Assets\Scripts\CharacterGrounding.cs" />
     <Compile Include="Assets\Scripts\Checkpoint.cs" />
     <Compile Include="Assets\Scripts\Coin.cs" />
-    <Compile Include="Assets\Scripts\CoinAudio.cs" />
     <Compile Include="Assets\Scripts\CoinBox.cs" />
     <Compile Include="Assets\Scripts\Collision2DExtensions.cs" />
     <Compile Include="Assets\Scripts\HandlePlayerDeath.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IMove.cs" />
     <Compile Include="Assets\Scripts\Interfaces\ITakeHits.cs" />
-    <Compile Include="Assets\Scripts\JumpAudio.cs" />
     <Compile Include="Assets\Scripts\KillOnTouch.cs" />
     <Compile Include="Assets\Scripts\LevelExit.cs" />
-    <Compile Include="Assets\Scripts\LifeLossAudio.cs" />
     <Compile Include="Assets\Scripts\Managers\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Managers\CheckpointManager.cs" />
     <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
     <Compile Include="Assets\Scripts\Mover.cs" />
-    <Compile Include="Assets\Scripts\PermanentDeathAudio.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
     <Compile Include="Assets\Scripts\UI\UICoinsText.cs" />
     <Compile Include="Assets\Scripts\UI\UIGainCoin.cs" />
