Coins reset on each level.
LevelExit unlocks if all coins gathered.

Adjusted MovingObjects to bounds (by axes alignment)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Assets\Scripts\Managers\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Managers\CheckpointManager.cs" />
     <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
-    <Compile Include="Assets\Scripts\Mover.cs" />
+    <Compile Include="Assets\Scripts\MovingObject.cs" />
     <Compile Include="Assets\Scripts\PlayerMovementController.cs" />
     <Compile Include="Assets\Scripts\UI\UICoinsText.cs" />
     <Compile Include="Assets\Scripts\UI\UIGainCoin.cs" />
